testsuite/tests/parser/should_fail/NoBlockArgumentsFailArrowCmds.stderr

NoBlockArgumentsFailArrowCmds.hs:7:27: error:
    Unexpected lambda command in function application:
        \ () -> () >- returnA
    Suggested fixes:
      Use parentheses.
      Perhaps you intended to use BlockArguments
